--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "@angular/cdk": "^16.2.4",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
-    "@angular/core": "^16.1.0",
+    "@angular/core": "^17.0.0",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.1.0",
     "@angular/material": "^16.2.4",
+    "@angular/material-date-fns-adapter": "^17.0.0",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "^0.14.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.6",
