--- a/package.json
+++ b/package.json
@@ -23,15 +23,21 @@
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
+    "browser-sync": "^3.0.2",
     "date-fns": "^2.30.0",
+    "localtunnel": "^1.8.3",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.11.0",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
+    "undici": "^6.18.2",
+    "vite": "^5.2.12",
+    "webpack-dev-middleware": "^7.2.1",
     "zone.js": "^0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
+    "@angular-devkit/build-angular": "^18.0.2",
     "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "^17.0.2",
     "@types/jasmine": "~4.3.0",
