--- a/package.json
+++ b/package.json
@@ -10,43 +10,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.2",
+    "@angular/animations": "^18.0.1",
     "@angular/cdk": "^17.0.0",
-    "@angular/common": "^17.0.2",
-    "@angular/compiler": "^17.0.2",
-    "@angular/core": "^17.0.2",
+    "@angular/common": "^18.0.1",
+    "@angular/compiler": "^18.0.1",
+    "@angular/core": "^18.0.1",
     "@angular/flex-layout": "^15.0.0-beta.42",
-    "@angular/forms": "^17.0.2",
+    "@angular/forms": "^18.0.1",
     "@angular/material": "^17.0.0",
     "@angular/material-date-fns-adapter": "^17.0.0",
-    "@angular/platform-browser": "^17.0.2",
-    "@angular/platform-browser-dynamic": "^17.0.2",
-    "@angular/router": "^17.0.2",
+    "@angular/platform-browser": "^18.0.1",
+    "@angular/platform-browser-dynamic": "^18.0.1",
+    "@angular/router": "^18.0.1",
     "@fortawesome/fontawesome-free": "^6.4.2",
-    "axios": "^1.7.2",
+    "axios": "^0.28.1",
     "bootstrap": "^5.3.2",
     "browser-sync": "^3.0.2",
     "date-fns": "^2.30.0",
-    "localtunnel": "^1.8.3",
+    "debug": "^4.3.5",
+    "follow-redirects": "^1.15.6",
+    "localtunnel": "^2.0.2",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.6.13",
+    "sweetalert2": "^11.11.0",
     "tslib": "^2.3.0",
     "undici": "^6.18.2",
     "vite": "^5.2.12",
     "webpack-dev-middleware": "^7.2.1",
+    "yargs-parser": "^21.1.1",
     "zone.js": "^0.14.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.2",
-    "@angular/cli": "~17.0.0",
-    "@angular/compiler-cli": "^17.0.2",
+    "@angular/cli": "~18.0.2",
+    "@angular/compiler-cli": "^18.0.1",
     "@types/jasmine": "~4.3.0",
+    "globby": "^14.0.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.2.2"
+    "typescript": "~5.4.5"
   }
 }
