--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.0.1",
-    "@angular/cdk": "^17.0.0",
+    "@angular/cdk": "^18.0.1",
     "@angular/common": "^18.0.1",
     "@angular/compiler": "^18.0.1",
     "@angular/core": "^18.0.1",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^18.0.1",
-    "@angular/material": "^17.0.0",
-    "@angular/material-date-fns-adapter": "^17.0.0",
+    "@angular/material": "^18.0.1",
+    "@angular/material-date-fns-adapter": "^18.0.1",
     "@angular/platform-browser": "^18.0.1",
     "@angular/platform-browser-dynamic": "^18.0.1",
     "@angular/router": "^18.0.1",
@@ -29,10 +29,12 @@
     "date-fns": "^2.30.0",
     "debug": "^4.3.5",
     "follow-redirects": "^1.15.6",
+    "leaflet": "^1.9.4",
     "localtunnel": "^2.0.2",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.11.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "undici": "^6.18.2",
     "vite": "^5.2.12",
     "webpack-dev-middleware": "^7.2.1",
@@ -44,6 +46,7 @@
     "@angular/cli": "~18.0.2",
     "@angular/compiler-cli": "^18.0.1",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.14",
     "globby": "^14.0.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
