--- a/package.json
+++ b/package.json
@@ -23,27 +23,26 @@
     "@angular/platform-browser-dynamic": "^18.0.1",
     "@angular/router": "^18.0.1",
     "@fortawesome/fontawesome-free": "^6.4.2",
-    "axios": "^0.28.1",
+    "axios": "^1.12.1",
     "bootstrap": "^5.3.2",
     "browser-sync": "^3.0.2",
     "date-fns": "^2.30.0",
-    "debug": "^4.3.5",
-    "follow-redirects": "^1.15.6",
+    "debug": "^4.4.1",
+    "follow-redirects": "^1.15.11",
     "leaflet": "^1.9.4",
-    "localtunnel": "^2.0.2",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.11.0",
     "tslib": "^2.6.2",
     "undici": "^6.18.2",
-    "vite": "^5.2.12",
+    "vite": "^7.1.5",
     "webpack-dev-middleware": "^7.2.1",
-    "yargs-parser": "^21.1.1",
+    "yargs-parser": "^22.0.0",
     "zone.js": "^0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.2",
-    "@angular/cli": "~18.0.2",
+    "@angular-devkit/build-angular": "^20.3.1",
+    "@angular/cli": "^20.3.1",
     "@angular/compiler-cli": "^18.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.14",
